correct z-index  order

--- a/style/mobile_style.css
+++ b/style/mobile_style.css
@@ -209,7 +209,7 @@ svg {
 	bottom: 0;
 	left: 0;
 	right: 0;
-	z-index: 900;
+	z-index: 9999;
 	display: none;
 	text-align: center;
 }
